# pytest-richtrace

./: .gitignore  .pre-commit-config.yaml  404.html  ChangeLog.md  Makefile  ReadMe.md  index.html  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
docs/quickstart/: 404.html  index.html  sitemap.xml
docs/quickstart/search/: search_index.json
search/: search_index.json
src/docs/: quickstart.yml
src/docs/quickstart/: index.md
src/pytest_richtrace/: __init__.py  collection_observer.py  console.py  event.py  events.py  item.py  plugin.py  results.py  rich_reporter.py  test_execution_observer.py
tests/: test_runtests.py
tests/reporting/: test_bad_module.py  test_fixture.py  test_missing_module.py  test_runtests.py  test_skip.py  test_teardown.py  test_xfail.py  test_xpass.py
tests/reporting/test2/: test2_test.py
tests/rich_trace/: test_event_bus.py
tests/test2/: test2_test.py
