[tool.poetry]
name = "pytest-richtrace"
version = "0.1.0"
description = ""
authors = ["Simon Kennedy <sffjunkie+code@gmail.com>"]
readme = "ReadMe.md"
packages = [{ include = "pytest_richtrace", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^12.6.0"
pytest = "^7.2.0"


[tool.poetry.group.dev.dependencies]
black = { version = "^22.10.0", allow-prereleases = true }

[tool.poetry.plugins."pytest11"]
"pytest-richtrace" = "pytest_richtrace"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
