[tool.poetry]
name = "pytest-richtrace"
version = "0.2.0"
description = "A pytest plugin that displays the names and information of the pytest hook functions as they are executed."
authors = ["Simon Kennedy <sffjunkie+code@gmail.com>"]
license = "Apache-2.0"
readme = "ReadMe.md"
packages = [{ include = "pytest_richtrace", from = "src" }]

[tool.poetry.plugins]
pytest11 = { pytest_richtrace = "pytest_richtrace" }

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.3.5"
pydantic = { git = "https://github.com/pydantic/pydantic" }

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.4.3"
mypy = "^1.3.0"
pytest = "^7.3.1"
mkdocs-material = "^9.1.13"
pre-commit = "^3.3.2"

[tool.pytest.ini_options]
testpaths = ["tests/rich_trace"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
